meta escape hatch, fold, prompt repair

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ commit.template
 .wireit
 target/
 *.tsbuildinfo
+.env
+.DS_Store
 
 # todo: we should figure out a good way to sync these with the internal repo instead of having to generate them with the init script
 Cargo.lock
